<resources>
    <string name="app_name">My Music</string>

    <!-- notification channel  -->
    <string name="channel_name">Channel Play Music</string>
    <string name="channel_description">This channel uses to notification music when app play music</string>
    <string name="content_desc_back">Back</string>

    <string name="menu_timer">Timer</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_cancel">Cancel</string>

    <string name="nav_home">Home</string>
    <string name="nav_playlist">Playlist</string>
    <string name="nav_album">Album</string>
    <string name="nav_topic">Topic</string>
    <string name="nav_other">Other</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_downloaded">Downloaded</string>
    <string name="nav_about_us">About us</string>
    <string name="nav_rate_app">Rate app</string>
    <string name="nav_app_info">App information</string>
    <string name="nav_setting">Setting</string>

    <string name="top_home">Home</string>
    <string name="top_playlist">Playlist</string>
    <string name="top_album">Album</string>
    <string name="top_topic">Topic</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="toolbar_txt_search_hint">Search for songs, artists, albums.</string>

    <string name="text_menu">Menu</string>
    <string name="text_similar_songs">Similar songs</string>
    <string name="text_playlist">PLAYLIST</string>
    <string name="text_randomly_play">Randomly Play</string>
    <string name="text_empty_song">There are currently no songs available. Please come back later.</string>
    <string name="text_no_songs_to_play_yet">No songs to play yet</string>
    <string name="text_play_music_favorite">Favorite</string>
    <string name="text_play_music_shuffle">Shuffle</string>
    <string name="text_play_music_previous">Previous</string>
    <string name="text_play_music_play_or_pause">Play or Pause</string>
    <string name="text_play_music_next">Next</string>
    <string name="text_play_music_repeat">Repeat</string>
    <string name="text_play_music_playlist_n">Playlist (%d)</string>
    <string name="text_play_music_selected_n">Selected (%d)</string>

    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_title_timer">Timer</string>

    <string name="text_search_title_recommend">Recommend for you</string>
    <string name="text_search_title_result">Search Results</string>
    <string name="title_no_found_result">We\'re sorry, we couldn\'t find any results.</string>

    <string name="text_title_song_favor">Favourite Songs</string>
</resources>