<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/ic_playlist"
            android:title="@string/nav_playlist" />
        <item
            android:id="@+id/nav_album"
            android:icon="@drawable/ic_album"
            android:title="@string/nav_album" />
        <item
            android:id="@+id/nav_topic"
            android:icon="@drawable/ic_topic"
            android:title="@string/nav_topic" />
    </group>
    <item android:title="@string/nav_other">
        <menu>
            <item
                android:id="@+id/nav_favorite"
                android:icon="@drawable/ic_heart_fill"
                android:title="@string/nav_favorite" />
            <item
                android:id="@+id/nav_downloaded"
                android:icon="@drawable/ic_download"
                android:title="@string/nav_downloaded" />
        </menu>
    </item>
    <item android:title="@string/nav_about_us">
        <menu>
            <item
                android:id="@+id/nav_rate_app"
                android:icon="@drawable/ic_star"
                android:title="@string/nav_rate_app" />
            <item
                android:id="@+id/nav_app_info"
                android:icon="@drawable/ic_info"
                android:title="@string/nav_app_info" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_setting"
                android:title="@string/nav_setting" />
        </menu>
    </item>
</menu>