<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/custom_overlay_detail_music"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <FrameLayout
        android:id="@+id/main_music_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_control_music" />

    <LinearLayout
        android:id="@+id/layout_control_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingVertical="8dp">

        <com.aptech.mymusic.presentation.view.common.TextThumbSeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:paddingStart="@dimen/media_player_pad"
            android:paddingEnd="@dimen/media_player_pad"
            android:progressDrawable="@drawable/seek_bar_text_thumb"
            android:thumb="@drawable/shape_seek_bar_text_thumb"
            android:thumbOffset="0dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/img_shuffle"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ripple_transparent_oval"
                android:contentDescription="@string/text_play_music_shuffle"
                android:padding="@dimen/media_player_pad"
                android:src="@drawable/ic_shuffle"
                android:tooltipText="@string/text_play_music_shuffle"
                tools:targetApi="o" />

            <ImageButton
                android:id="@+id/img_prev"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/img_shuffle"
                android:background="@drawable/ripple_transparent_oval"
                android:contentDescription="@string/text_play_music_previous"
                android:padding="@dimen/media_player_pad"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_prev"
                android:tooltipText="@string/text_play_music_previous"
                app:tint="@color/white"
                tools:targetApi="o" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/img_play_pause"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ripple_transparent_oval"
                android:contentDescription="@string/text_play_music_play_or_pause"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:tooltipText="@string/text_play_music_play_or_pause"
                app:lottie_colorFilter="@color/white"
                app:lottie_rawRes="@raw/lottie_play_pause_circle"
                app:lottie_speed="1.5"
                tools:targetApi="o" />

            <ImageButton
                android:id="@+id/img_next"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/img_repeat"
                android:background="@drawable/ripple_transparent_oval"
                android:contentDescription="@string/text_play_music_next"
                android:padding="@dimen/media_player_pad"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_next"
                android:tooltipText="@string/text_play_music_next"
                app:tint="@color/white"
                tools:targetApi="o" />

            <ImageButton
                android:id="@+id/img_repeat"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ripple_transparent_oval"
                android:contentDescription="@string/text_play_music_repeat"
                android:padding="@dimen/media_player_pad"
                android:src="@drawable/ic_repeat"
                android:tooltipText="@string/text_play_music_repeat"
                tools:targetApi="o" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>