<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_search"
        style="@style/AppToolbar.NavBack.Black"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <EditText
            android:id="@+id/edt_tb_search"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@drawable/custom_radius_10_black_thin"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp"
            android:focusable="true"
            android:hint="@string/toolbar_txt_search_hint"
            android:inputType="textAutoComplete"
            android:paddingHorizontal="12dp"
            android:textSize="12sp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ln_layout_suggest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_search"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="@dimen/space_view"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingVertical="4dp"
            android:text="@string/text_search_title_recommend"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_recommend"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ln_layout_suggest">

        <LinearLayout
            android:id="@+id/ll_result_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingVertical="4dp"
                android:layout_marginStart="6dp"
                android:text="@string/text_search_title_result"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_search_song"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:itemCount="10"
                tools:listitem="@layout/item_song" />
        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:lottie_autoPlay="true"
            android:layout_marginTop="64dp"
            android:layout_centerHorizontal="true"
            app:lottie_colorFilter="@color/black"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lottie_loading" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:lottie_autoPlay="true"
            android:layout_marginTop="64dp"
            android:layout_centerHorizontal="true"
            app:lottie_colorFilter="@color/black"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lottie_search_not_found" />


    </RelativeLayout>

</RelativeLayout>