<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:id="@+id/control_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="vertical">

        <SeekBar
            android:id="@+id/sb_music"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#1A000000"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:progressDrawable="@drawable/seek_bar_style_main"
            android:thumb="@null" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:cardCornerRadius="28dp">

                <ImageView
                    android:id="@+id/img_thumb"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/background_placeholder"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="6dp"
                android:layout_toStartOf="@id/rl_box_control"
                android:layout_toEndOf="@id/img_thumb"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_song_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/text_no_songs_to_play_yet"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_singer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/black_50"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_box_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/img_likes"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="-8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/text_play_music_favorite"
                    android:padding="12dp"
                    android:src="@drawable/ic_heart"
                    android:tooltipText="@string/text_play_music_favorite"
                    app:tint="?attr/colorPrimary"
                    tools:targetApi="o" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/img_play_pause"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="-8dp"
                    android:layout_toEndOf="@id/img_likes"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/text_play_music_play_or_pause"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:tooltipText="@string/text_play_music_play_or_pause"
                    app:lottie_colorFilter="?attr/colorPrimary"
                    app:lottie_rawRes="@raw/lottie_play_pause"
                    app:lottie_speed="1.5"
                    tools:targetApi="o" />

                <ImageButton
                    android:id="@+id/img_next"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_toEndOf="@id/img_play_pause"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/text_play_music_next"
                    android:padding="12dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_next"
                    android:tooltipText="@string/text_play_music_next"
                    app:tint="?attr/colorPrimary"
                    tools:targetApi="o" />

            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

</LinearLayout>
