<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:foreground="@drawable/custom_overlay_card_black"
        tools:ignore="ContentDescription" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:elevation="0dp"
            app:liftOnScroll="true"
            app:liftOnScrollTargetViewId="@id/nested_scroll">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_shadow_bottom"
                app:collapsedTitleTextColor="@color/toolbar_color"
                app:expandedTitleTextColor="@color/toolbar_color"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:scrimAnimationDuration="500"
                app:scrimVisibleHeightTrigger="58dp"
                app:titleEnabled="false">

                <RelativeLayout
                    android:id="@+id/rl_detail_header_with_list_category"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <ImageView
                        android:id="@+id/img_bg_topic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:foreground="@drawable/custom_overlay_banner"
                        android:scaleType="centerCrop"
                        android:src="@drawable/background_header_layout"
                        tools:ignore="ContentDescription" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_detail_header_with_list_song"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingHorizontal="24dp"
                    android:paddingTop="56dp"
                    android:paddingBottom="8dp"
                    android:visibility="gone"
                    tools:visibility="gone">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view_ic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        app:cardCornerRadius="@dimen/ic_radius"
                        app:cardElevation="10dp">

                        <ImageView
                            android:id="@+id/img_thumb"
                            android:layout_width="180dp"
                            android:layout_height="180dp"
                            tools:background="@drawable/background_placeholder"
                            tools:ignore="ContentDescription" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv_title_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/card_view_ic"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_sub_title_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_title_card"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/white_70"
                        android:textSize="14sp"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btn_play_rand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_sub_title_card"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="16dp"
                        android:padding="10dp"
                        android:text="@string/text_randomly_play" />
                </RelativeLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    style="@style/AppToolbar.NavBack"
                    android:background="@android:color/transparent"
                    app:layout_collapseMode="pin"
                    tools:title="@string/app_name" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/icon_loading"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="32dp"
                    android:visibility="gone"
                    app:lottie_colorFilter="@color/white"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/lottie_loading" />

                <TextView
                    android:id="@+id/tv_no_have_song"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-medium"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="16dp"
                    android:text="@string/text_empty_song"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_song"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/item_song"
                    tools:visibility="visible" />


            </FrameLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>